--- a/Update1.html
+++ b/Update1.html
@@ -1,6 +1,6 @@
 [
 {
-"Version" : "3.0.8 (27)",
+"Version" : "3.0.9",
 "Update_Log" : "Hello Everyone A new version of Mod has been lunched.If you want new features you can easily view this content.More Information visit here https://instagram.kanha_bzs/",
 "Update_Link" : "https://maharnamods.blogspot.com"
 }
